--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "crypto-browserify": "^3.12.0",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-confirm-alert": "^3.0.6",
